--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ tqdm = "^4.67.1"
 aiofiles = "^24.1.0"
 beautifulsoup4 = ">=4.13.4"
 lxml = "^5.4.0"
+typer = "^0.12.3"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -48,6 +49,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 mediaflow-proxy = "mediaflow_proxy.main:run"
+mediaflow-proxy-cli = "mediaflow_proxy.cli:app"
 
 [tool.black]
 line-length = 120
