--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,8 @@ typer = "^0.12.3"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
+pytest = "^8.2"
+pytest-asyncio = "^0.23"
 
 [build-system]
 requires = ["poetry-core"]
